# webassembly-framework

./: .gitmodules  CMakeLists.txt  README.md
include/: framework.h  program.h  sampler.h  shader.h  texture.h
scripts/: build_emscripten_cmake.bat  build_vs16_cmake.bat
src/: framework.cpp  program.cpp  sampler.cpp  shader.cpp  texture.cpp
